Update jwt for auth
