# src/models/User.ts
@@ -5,6 +5,7 @@ class User extends Model {
   public id!: number;
   public name!: string;
   public email!: string;
+  public password!: string;
 }
 
 User.init(
@@ -23,6 +24,12 @@ User.init(
       allowNull: false,
       unique: true,
     },
+
+    password: {
+      type: DataTypes.STRING,
+      allowNull: false,
+    },
+
     deletedAt: {
       type: DataTypes.DATE,
       allowNull: true,
