# src/routes/api.ts
@@ -1,19 +1,22 @@
 import { Router, Request, Response, NextFunction } from 'express';
 import { UserController } from '@/controllers/userController';
-
+import { authMiddleware } from '@/middleware/authMiddleware';
 const router = Router();
 const userController = new UserController();
 
-router.get('/users', (req: Request, res: Response, next: NextFunction) =>
+router.get('/users', authMiddleware, (req: Request, res: Response, next: NextFunction) =>
   userController.getUsers(req, res, next),
+);
+router.get('/users/:id', authMiddleware, (req: Request, res: Response, next: NextFunction) =>
+  userController.getUserById(req, res, next),
 );
 router.post('/users', (req: Request, res: Response, next: NextFunction) =>
   userController.createUser(req, res, next),
 );
-router.patch('/users/:id', (req: Request, res: Response, next: NextFunction) =>
+router.patch('/users/:id', authMiddleware, (req: Request, res: Response, next: NextFunction) =>
   userController.updateUser(req, res, next),
 );
-router.delete('/users/:id', (req: Request, res: Response, next: NextFunction) =>
+router.delete('/users/:id', authMiddleware, (req: Request, res: Response, next: NextFunction) =>
   userController.deleteUser(req, res, next),
 );
 
